--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title data-default>Vite + React + TS</title>
+    <title data-default>MorphyIMG - Free File Converter & Viewer</title>
+    <meta name="description" content="Convert and view files online for free. Support for 50+ formats including images, documents, spreadsheets, and more. No registration required." />
   </head>
   <body>
     <div id="root"></div>
